--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -128,8 +128,7 @@
         </ul>
         <h2 class="rounded-borders-btn">Preferencias</h2>
         <ul class="aside-nav">
-          <li><a href="#">Contraseña</a></li>
-        </ul>
+          <li><a href="<%= edit_user_registration_path %>">Contraseña</a></li>        </ul>
       </div>
       <!--<div id="bags">-->
         <!--<div id="stage">-->
