--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,7 +81,11 @@
                       <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu pull-right">
-                      <li><a href="#">Mis Ofertas</a></li>
+                      <% if current_user.user_role_id == 1%>
+                        <li><a href="<%= users_offers_company_user_path %>">Mis Ofertas</a></li>
+                      <% else %>
+                          <li><a href="<%= users_offers_client_user_path %>">Mis Ofertas</a></li>
+                      <% end %>
                       <li><a href="<%= edit_user_path(current_user) %>">Mi Perfil</a></li>
                       <li><a href="#">Preferencias</a></li>
                       <li><a href="#">Ayuda</a></li>
