--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,7 @@
-<p>Hola <%= @resource.email %>!</p>
+﻿<p>Welcome <%= @resource.email %>!</p>
 
-<p>Alguien ha solicitado un cambio de contraseña para esta cuenta, lo cual puede realizarse mediante el link de aquí abajo.</p>
+<p>You can confirm your password change through the link below:</p>
 
 <p><%= link_to 'Cambiar mi contraseña', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
 
-<p>Si no solicitaste este cambio, ignorá este email.</p>
-<p>Tu contraseña no se cambiará a menos que hagas click en el link y ingreses una nueva.</p>
+<p>If you didn´t request the password change, ignore this email and your password will remain the same.</p>
