Center images in titles#show

--- a/app/assets/stylesheets/vontrip.css
+++ b/app/assets/stylesheets/vontrip.css
@@ -2318,4 +2318,8 @@ label.tweenty {
 .title-image{
     height: 100px;
     width: 100px ;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
 }
