--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -94,7 +94,7 @@
         <h2>Detalle de Cuenta</h2>
         <ul class="aside-nav">
           <li><a href="#">Mis Ofertas</a></li>
-          <li><a href="#">Preferencias</a></li>
+          <li><a href="<%= users_titles_user_path %>">Preferencias</a></li>
         </ul>
         <h2>Información Personal</h2>
         <ul class="aside-nav">
