--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -220,7 +220,7 @@
             <h2 class="rounded-borders-btn">Detalle de Cuenta</h2>
             <ul class="aside-nav">
               <li><a href="<%= users_offers_company_user_path %>">Mis Ofertas</a></li>
-              <li><a href="#">Preferencias</a></li>
+              <li><a href="<%= users_titles_user_path %>">Preferencias</a></li>
             </ul>
             <h2 class="rounded-borders-btn">Información Personal</h2>
             <ul class="aside-nav">
