--- a/app/views/users/titles_user.html.erb
+++ b/app/views/users/titles_user.html.erb
@@ -154,7 +154,7 @@
         <h2 class="rounded-borders-btn">Detalle de Cuenta</h2>
         <ul class="aside-nav">
           <li><a href="<%= users_offers_client_user_path %>">Mis Ofertas</a></li>
-          <li><a href="<%= users_titles_user_path %>" class="active">Preferencias</a></li>
+          <li><a href="<%= users_titles_user_path %>" class="active">Mis Intereses</a></li>
         </ul>
         <h2 class="rounded-borders-btn">Información Personal</h2>
         <ul class="aside-nav">
