--- a/app/views/users/titles_user.html.erb
+++ b/app/views/users/titles_user.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <section class="span8">
       <header class="out rounded-borders-btn">
-        <h2>Preferencias</h2>
+        <h2>Mis Intereses</h2>
       </header>
 
       <div class="wrapper">
@@ -13,7 +13,11 @@
               <div>
                 <img class="title-image" src="../assets/indumentaria-femenina.jpg" alt=""/>
                 <div>
-                  <input type="checkbox"> Indumentaria Fem </input>
+                  <%if @user.client.prefer("Indumentaria Femenina")%>
+                    <input type="checkbox" checked> Ropa Mujer </input>
+                  <%else%>
+                    <input type="checkbox"> Ropa Mujer </input>
+                  <%end%>
                 </div>
               </div>
               <br>
@@ -21,7 +25,11 @@
               <div>
                 <img class="title-image" src="../assets/indumentaria-masculina.jpg" alt=""/>
                 <div>
-                  <input type="checkbox"> Indumentaria Masc </input>
+                  <%if @user.client.prefer("Indumentaria Masculina")%>
+                      <input type="checkbox" checked> Ropa Hombre </input>
+                  <%else%>
+                      <input type="checkbox"> Ropa Hombre </input>
+                  <%end%>
                 </div>
               </div>
               <br>
@@ -29,7 +37,11 @@
               <div>
                 <img class="title-image" src="../assets/bebes.jpg" alt=""/>
                 <div>
-                  <input type="checkbox"> Niños </input>
+                  <%if @user.client.prefer("Ninos")%>
+                      <input type="checkbox" checked> Niños </input>
+                  <%else%>
+                      <input type="checkbox"> Niños </input>
+                  <%end%>
                 </div>
               </div>
               <br>
@@ -42,7 +54,11 @@
               <div>
                 <img class="title-image" src="../assets/gastronomia.jpg" alt=""/>
                 <div>
-                  <input type="checkbox"> Gastronomia </input>
+                  <%if @user.client.prefer("Gastronomia")%>
+                      <input type="checkbox" checked> Gastronomía </input>
+                  <%else%>
+                      <input type="checkbox"> Gastronomía </input>
+                  <%end%>
                 </div>
               </div>
               <br>
@@ -50,7 +66,11 @@
               <div>
                 <img class="title-image" src="../assets/belleza.jpg" alt=""/>
                 <div>
-                  <input type="checkbox"> Belleza </input>
+                  <%if @user.client.prefer("Belleza")%>
+                      <input type="checkbox" checked> Belleza </input>
+                  <%else%>
+                      <input type="checkbox"> Belleza </input>
+                  <%end%>
                 </div>
               </div>
               <br>
@@ -58,7 +78,11 @@
               <div>
                 <img class="title-image" src="../assets/cine.jpg" alt=""/>
                 <div>
-                  <input type="checkbox"> Cine </input>
+                  <%if @user.client.prefer("Cine")%>
+                      <input type="checkbox" checked> Cine </input>
+                  <%else%>
+                      <input type="checkbox"> Cine </input>
+                  <%end%>
                 </div>
               </div>
               <br>
@@ -72,7 +96,11 @@
               <div>
                 <img class="title-image" src="../assets/teatro.jpg" alt=""/>
                 <div>
-                  <input type="checkbox"> Teatro </input>
+                  <%if @user.client.prefer("Teatro")%>
+                      <input type="checkbox" checked> Teatro </input>
+                  <%else%>
+                      <input type="checkbox"> Teatro </input>
+                  <%end%>
                 </div>
               </div>
               <br>
@@ -80,7 +108,11 @@
               <div>
                 <img class="title-image" src="../assets/electronicos.jpg" alt=""/>
                 <div>
-                  <input type="checkbox"> Electronicos </input>
+                  <%if @user.client.prefer("Electronica")%>
+                      <input type="checkbox" checked> Electronica </input>
+                  <%else%>
+                      <input type="checkbox"> Electronica </input>
+                  <%end%>
                 </div>
               </div>
               <br>
@@ -88,7 +120,11 @@
               <div>
                 <img class="title-image" src="../assets/estudio.jpg" alt=""/>
                 <div>
-                  <input type="checkbox"> Estudio </input>
+                  <%if @user.client.prefer("Estudio")%>
+                      <input type="checkbox" checked> Estudio </input>
+                  <%else%>
+                      <input type="checkbox"> Estudio </input>
+                  <%end%>
                 </div>
               </div>
               <br>
@@ -101,7 +137,11 @@
               <div>
                 <img class="title-image" src="../assets/deporte.jpg" alt=""/>
                 <div>
-                  <input type="checkbox"> Deporte </input>
+                  <%if @user.client.prefer("Deportes")%>
+                      <input type="checkbox" checked> Deporte </input>
+                  <%else%>
+                      <input type="checkbox"> Deporte </input>
+                  <%end%>
                 </div>
               </div>
               <br>
@@ -109,7 +149,11 @@
               <div>
                 <img class="title-image" src="../assets/hogar.jpg" alt=""/>
                 <div>
-                  <input type="checkbox"> Hogar </input>
+                  <%if @user.client.prefer("Hogar")%>
+                      <input type="checkbox" checked> Hogar </input>
+                  <%else%>
+                      <input type="checkbox"> Hogar </input>
+                  <%end%>
                 </div>
               </div>
               <br>
@@ -117,7 +161,11 @@
               <div>
                 <img class="title-image" src="../assets/viajes.jpg" alt=""/>
                 <div>
-                  <input type="checkbox"> Viaje </input>
+                  <%if @user.client.prefer("Viajes y Hoteles")%>
+                      <input type="checkbox" checked> Viajes </input>
+                  <%else%>
+                      <input type="checkbox"> Viajes </input>
+                  <%end%>
                 </div>
               </div>
               <br>
