--- a/app/views/users/offers_client_user.html.erb
+++ b/app/views/users/offers_client_user.html.erb
@@ -1,7 +1,7 @@
 <div class="container" id="main-content">
   <div class="row">
-    <section class="span8">
-      <header class="out">
+    <section class="span8 rounded-borders light-shadowed">
+      <header class="out rounded-borders-btn">
         <h2>Ofertas</h2>
       </header>
 
