--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,7 +19,7 @@
                 <%= f.password_field :password, :class => "input-xlarge" %>
                 <hr>
                 <div class="text-center">
-                  <button type="submit" class="btn btn-vontrip">Cambiar Contraseña</button>
+                  <button type="submit" class="btn btn-dealhunter">Cambiar Contraseña</button>
                 </div>
             <% end %>
 
