--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
         rel="icon" type="image/png"/>
   <!-- Le styles -->
   <link href="../assets/bootstrap.css" rel="stylesheet">
-  <link href="../assets/vontrip.css" rel="stylesheet">
+  <link href="../assets/dealhunter.css" rel="stylesheet">
 
   <!--    <link href="css/bootstrap-responsive.css" rel="stylesheet">
   -->
@@ -51,7 +51,7 @@
               <hr>
               <div style="margin-top:-16px">¿Ya sos miembro?</div>
               <a href="<%= new_user_session_path %>">
-                <button type="button" class="btn btn-vontrip medium rounded-borders-btn" id="btn-inscribite" style="margin-left:0px; margin-top:0px;padding:6px !important;">Entrar</button>
+                <button type="button" class="btn btn-dealhunter medium rounded-borders-btn" id="btn-inscribite" style="margin-left:0px; margin-top:0px;padding:6px !important;">Entrar</button>
             </div>
             </a>
           </div>
@@ -72,7 +72,7 @@
                   <%= f.password_field :password, :class => "input wide", :placeholder => "Contraseña", :required => true %>
                   <%= f.password_field :password_confirmation, :class => "input wide", :placeholder => "Repetir Contraseña", :required => true %>
                   <hr>
-                  <button type="submit" class="btn btn-vontrip medium full-width rounded-borders-btn">Inscribite</button>
+                  <button type="submit" class="btn btn-dealhunter medium full-width rounded-borders-btn">Inscribite</button>
               <% end %>
             </div>
           </div>
@@ -118,7 +118,7 @@
         <div class="span2">
           <ul class="inline pull-right social">
             <li><a href="#" target="_blank"><img src="/assets/icon-fb.png"></a></li>
-            <li><a href="https://twitter.com/VonTripArg" target="_blank"><img src="/assets/icon-twitter.png"></a></li>
+            <li><a href="https://twitter.com/dealhunterArg" target="_blank"><img src="/assets/icon-twitter.png"></a></li>
             <li><a href="#" target="_blank"><img src="/assets/icon-gPlus.png"></a></li>
 
           </ul>
