--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <!-- Le styles -->
 
   <%= stylesheet_link_tag 'bootstrap.css' %>
-  <%= stylesheet_link_tag 'vontrip.css' %>
+  <%= stylesheet_link_tag 'dealhunter.css' %>
   <%= stylesheet_link_tag 'formtastic.css' %>
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
@@ -37,7 +37,7 @@
 
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-39073159-1']);
-      _gaq.push(['_setDomainName', 'vontrip.com']);
+      _gaq.push(['_setDomainName', 'dealhunter.com']);
       _gaq.push(['_setAllowLinker', true]);
       _gaq.push(['_trackPageview']);
 
@@ -74,7 +74,7 @@
                 <li>
 
                   <div class="btn-group">
-                    <a class="btn btn-vontrip dropdown-toggle rounded-borders-btn" data-toggle="dropdown" href="#">
+                    <a class="btn btn-dealhunter dropdown-toggle rounded-borders-btn" data-toggle="dropdown" href="#">
                       <i class="icon-user icon-white"></i> Mi Cuenta
                       <span class="caret"></span>
                     </a>
@@ -140,7 +140,7 @@
           <div class="span2">
             <ul class="inline pull-right social">
               <li><a href="#" target="_blank"><img src="/assets/icon-fb.png"></a></li>
-              <li><a href="https://twitter.com/VonTripArg" target="_blank"><img src="/assets/icon-twitter.png"></a></li>
+              <li><a href="https://twitter.com/dealhunterArg" target="_blank"><img src="/assets/icon-twitter.png"></a></li>
               <li><a href="#" target="_blank"><img src="/assets/icon-gPlus.png"></a></li>
 
             </ul>
