--- a/app/views/pages/faqs.html.erb
+++ b/app/views/pages/faqs.html.erb
@@ -3,14 +3,14 @@
     <html>
     <head>
       <meta charset="UTF-8">
-      <title>Vontrip</title>
+      <title>dealhunter</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- Le styles -->
 
       <link href="/assets/bootstrap.css?body=1" media="screen" rel="stylesheet" type="text/css" />
-      <link href="/assets/vontrip.css?body=1" media="screen" rel="stylesheet" type="text/css" />
+      <link href="/assets/dealhunter.css?body=1" media="screen" rel="stylesheet" type="text/css" />
       <link href="/assets/formtastic.css?body=1" media="screen" rel="stylesheet" type="text/css" />
       <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
@@ -53,7 +53,7 @@
         <div class="accordion">
           <ul class="accord-tab clearfix">
             <li>
-              <h3>¿Cómo puedo hacerme miembre de Vontrip Argentina?</h3>
+              <h3>¿Cómo puedo hacerme miembre de dealhunter Argentina?</h3>
             </li>
             <li>
                   <span>
@@ -68,7 +68,7 @@
                 <p>Podes aplicar desde nuestro formulario online y luego nuestro departamento de admisiones procesara la información enviada para otorgarte tu membresía.</p>
               </li>
               <li>
-                <p>Un miembro puede invitar a sus amigos a ser parte de VonTrip. Si conoces alguien que ya es miembro pedile que te envía una invitación y accede a nuestra membresía. </p>
+                <p>Un miembro puede invitar a sus amigos a ser parte de dealhunter. Si conoces alguien que ya es miembro pedile que te envía una invitación y accede a nuestra membresía. </p>
               </li>
             </ol>
           </div>
@@ -81,7 +81,7 @@
             <p>Podes invitar a tus amigos y familiares desde la sección “INVITAR AMIGOS”  e invitarlos a aprovechar las numerosas ofertas que ofrecemos en nuestra página. </p>
             <p>Las direcciones e-mail de tus ahijados serán utilizadas sólo para enviar la invitación. No serán cedidas ni utilizadas para otro fin.</p>
             <p>Invitando a tus contactos obtendrás un crédito por $30 por la primera compra de cada uno de tus invitados en nuestra página web. </p>
-            <p>Cuando alguno de tus invitados realice su primera compra en VonTrip.com.ar, te enviaremos un e-mail para informarte. Los créditos son válidos durante 6 meses a partir de la fecha de obtención y son acumulables. Los mismos son activados en tu cuenta una vez que tu invitado haya hecho efectiva la compra. </p>
+            <p>Cuando alguno de tus invitados realice su primera compra en dealhunter.com.ar, te enviaremos un e-mail para informarte. Los créditos son válidos durante 6 meses a partir de la fecha de obtención y son acumulables. Los mismos son activados en tu cuenta una vez que tu invitado haya hecho efectiva la compra. </p>
           </div>
 
           <ul class="accord-tab clearfix">
@@ -135,7 +135,7 @@
             <li><span></span></li>
           </ul>
           <div class="accord_cont">
-            <p>Puedes reservar en www.Vontrip.com o contactarte con nuestro departamento de reservas:</p> 
+            <p>Puedes reservar en www.dealhunter.com o contactarte con nuestro departamento de reservas:</p> 
             <p> 0 800 345 trip </p>
             <p> Disponible de lunes a viernes de 9:00 a 18:00hs.  </p>
           </div>
@@ -150,11 +150,11 @@
 
 
           <ul class="accord-tab clearfix">
-            <li><h3>¿Es seguro comprar en VonTrip Argentina?</h3></li>
+            <li><h3>¿Es seguro comprar en dealhunter Argentina?</h3></li>
             <li><span></span></li>
           </ul>
           <div class="accord_cont">
-            <p>Comprar en VonTrips es totalmente seguro. Sus datos son protegidos a lo largo de todo el proceso de compra.</p>
+            <p>Comprar en dealhunters es totalmente seguro. Sus datos son protegidos a lo largo de todo el proceso de compra.</p>
             <p>Todas las validaciones de pago son controladas por la plataforma de pago seguro desarrollada por MercadoPago Argentina.</p>
           </div>
 
@@ -183,7 +183,7 @@
           </ul>
           <div class="accord_cont">
             <p> Te aconsejamos de intentar contactar en un primer momento con tu banco con la finalidad de verificar si tienes un límite de crédito. </p>
-            <p> Si no es la causa, te invitamos que te pongas en contacto con nosotros via telefónica al 0 800 345 trip o reclamos@vontrip.com.ar. </p>
+            <p> Si no es la causa, te invitamos que te pongas en contacto con nosotros via telefónica al 0 800 345 trip o reclamos@dealhunter.com.ar. </p>
             <p> Si decides comunicarte por teléfono intentaremos encontrar una solución para poder efectuar tu pago por teléfono y hacer efectiva tu compra.</p>
           </div>
 
@@ -229,7 +229,7 @@
               <li>Entre 10 y 7 días antes de la fecha de inicio = 75 % del Importe Total de la estadía </li>
               <li>Menos de 7 días antes de la fecha de inicio = 100 % del Importe Total de la estadía.</li>
             </ul>
-            <p>Excepto condiciones especiales y particulares estipuladas por los proveedores.  El monto a devolver se realizará en crédito para consumir en VONTRIP.  </p>
+            <p>Excepto condiciones especiales y particulares estipuladas por los proveedores.  El monto a devolver se realizará en crédito para consumir en dealhunter.  </p>
           </div>
 
           <ul class="accord-tab clearfix">
@@ -237,7 +237,7 @@
             <li><span></span></li>
           </ul>
           <div class="accord_cont">
-            <p>Le comunicamos que si deseas enviarnos un reclamo, deberás comunicarte al 0 800 345 trip o via e-mail a reclamos@vontrip.com.ar </p>
+            <p>Le comunicamos que si deseas enviarnos un reclamo, deberás comunicarte al 0 800 345 trip o via e-mail a reclamos@dealhunter.com.ar </p>
             <p> Nuestro departamento de atención al cliente se pondrá en contacto contigo en el menor tiempo posible.</p>
           </div>
 
@@ -264,7 +264,7 @@
             <ul id="custumer-support" class="pull-right">
               <li class="custumer-support-title">Atención al Cliente</li>
               <li class="telephone-number">0800-345-TRIP(8747)</li>
-              <li class="contact-mail"><a href="<%= pages_contact_path %>"><i class="icon-contact-mail"></i> info@vontrip.com</a></li>
+              <li class="contact-mail"><a href="<%= pages_contact_path %>"><i class="icon-contact-mail"></i> info@dealhunter.com</a></li>
             </ul>
           </div>
         </div>
@@ -282,13 +282,13 @@
                 <li><a href="/pages/contact">Contacto</a></li>
               </ul>
             </nav>
-            <p class="copyright">Copyright © 2013 Vontrip.com. Todos los derechos reservados</p>
+            <p class="copyright">Copyright © 2013 dealhunter.com. Todos los derechos reservados</p>
           </div>
 
           <div class="span5">
             <ul class="inline pull-right social">
-              <li><a href="http://www.facebook.com/vontripargentina" target="_blank"><img src="/assets/icon-fb.png"></a></li>
-              <li><a href="https://twitter.com/VonTripArg" target="_blank"><img src="/assets/icon-twitter.png"></a></li>
+              <li><a href="http://www.facebook.com/dealhunterargentina" target="_blank"><img src="/assets/icon-fb.png"></a></li>
+              <li><a href="https://twitter.com/dealhunterArg" target="_blank"><img src="/assets/icon-twitter.png"></a></li>
               <li><a href="https://plus.google.com/116522684361738618061" target="_blank"><img src="/assets/icon-gPlus.png"></a></li>
 
             </ul>
@@ -320,7 +320,7 @@
         <div class="accordion">
           <ul class="accord-tab clearfix">
             <li>
-              <h3>¿Cómo puedo hacerme miembre de Vontrip Argentina?</h3>
+              <h3>¿Cómo puedo hacerme miembre de dealhunter Argentina?</h3>
             </li>
             <li>
                   <span>
@@ -335,7 +335,7 @@
                 <p>Podes aplicar desde nuestro formulario online y luego nuestro departamento de admisiones procesara la información enviada para otorgarte tu membresía.</p>
               </li>
               <li>
-                <p>Un miembro puedo invitar a sus amigos a ser parte de VonTrip. Si conoces alguien que ya es miembro pedile que te envía una invitación y accede a nuestra membresía. </p>
+                <p>Un miembro puedo invitar a sus amigos a ser parte de dealhunter. Si conoces alguien que ya es miembro pedile que te envía una invitación y accede a nuestra membresía. </p>
               </li>
             </ol>
           </div>
@@ -348,7 +348,7 @@
             <p>Podes invitar a tus amigos y familiares desde la sección “INVITAR AMIGOS”  e invitarlos a aprovechar las numerosas ofertas que ofrecemos en nuestra página. </p>
             <p>Las direcciones e-mail de tus ahijados serán utilizadas sólo para enviar la invitación. No serán cedidas ni utilizadas para otro fin.</p>
             <p>Invitando a tus contactos obtendrás un crédito por $30 por la primera compra de cada uno de tus invitados en nuestra página web. </p>
-            <p>Cuando alguno de tus invitados realice su primera compra en VonTrip.com.ar, te enviaremos un e-mail para informarte. Los créditos son válidos durante 6 meses a partir de la fecha de obtención y son acumulables. Los mismos son activados en tu cuenta una vez que tu invitado haya hecho efectiva la compra. </p>
+            <p>Cuando alguno de tus invitados realice su primera compra en dealhunter.com.ar, te enviaremos un e-mail para informarte. Los créditos son válidos durante 6 meses a partir de la fecha de obtención y son acumulables. Los mismos son activados en tu cuenta una vez que tu invitado haya hecho efectiva la compra. </p>
           </div>
 
           <ul class="accord-tab clearfix">
@@ -402,7 +402,7 @@
             <li><span></span></li>
           </ul>
           <div class="accord_cont">
-            <p>Puedes reservar en www.Vontrip.com.ar o contactarte con nuestro departamento de reservas:</p> 
+            <p>Puedes reservar en www.dealhunter.com.ar o contactarte con nuestro departamento de reservas:</p> 
             <p> 0 800 345 TRIP </p>
             <p> Disponible de lunes a viernes de 9:00 a 18:00hs.  </p>
           </div>
@@ -417,11 +417,11 @@
 
 
           <ul class="accord-tab clearfix">
-            <li><h3>¿Es seguro comprar en VonTrip Argentina?</h3></li>
+            <li><h3>¿Es seguro comprar en dealhunter Argentina?</h3></li>
             <li><span></span></li>
           </ul>
           <div class="accord_cont">
-            <p>Comprar en VonTrips es totalmente seguro. Sus datos son protegidos a lo largo de todo el proceso de compra.</p>
+            <p>Comprar en dealhunters es totalmente seguro. Sus datos son protegidos a lo largo de todo el proceso de compra.</p>
             <p>Todas las validaciones de pago son controladas por la plataforma de pago seguro desarrollada por MercadoPago Argentina.</p>
           </div>
 
@@ -450,7 +450,7 @@
           </ul>
           <div class="accord_cont">
             <p> Te aconsejamos de intentar contactar en un primer momento con tu banco con la finalidad de verificar si tienes un límite de crédito. </p>
-            <p> Si no es la causa, te invitamos que te pongas en contacto con nosotros via telefónica al 0 800 345 trip o reclamos@vontrip.com.ar. </p>
+            <p> Si no es la causa, te invitamos que te pongas en contacto con nosotros via telefónica al 0 800 345 trip o reclamos@dealhunter.com.ar. </p>
             <p> Si decides comunicarte por teléfono intentaremos encontrar una solución para poder efectuar tu pago por teléfono y hacer efectiva tu compra.</p>
           </div>
 
@@ -496,7 +496,7 @@
               <li>Entre 10 y 7 días antes de la fecha de inicio = 75 % del Importe Total de la estadía </li>
               <li>Menos de 7 días antes de la fecha de inicio = 100 % del Importe Total de la estadía.</li>
             </ul>
-            <p>Excepto condiciones especiales y particulares estipuladas por los proveedores.  El monto a devolver se realizará en crédito para consumir en VONTRIP.  </p>
+            <p>Excepto condiciones especiales y particulares estipuladas por los proveedores.  El monto a devolver se realizará en crédito para consumir en dealhunter.  </p>
           </div>
 
           <ul class="accord-tab clearfix">
@@ -504,7 +504,7 @@
             <li><span></span></li>
           </ul>
           <div class="accord_cont">
-            <p>Le comunicamos que si deseas enviarnos un reclamo, deberás comunicarte al 0 800 345 trip o via e-mail a reclamos@vontrip.com.ar </p>
+            <p>Le comunicamos que si deseas enviarnos un reclamo, deberás comunicarte al 0 800 345 trip o via e-mail a reclamos@dealhunter.com.ar </p>
             <p> Nuestro departamento de atención al cliente se pondrá en contacto contigo en el menor tiempo posible.</p>
           </div>
 
