--- a/app/views/pages/we.html.erb
+++ b/app/views/pages/we.html.erb
@@ -3,14 +3,14 @@
     <html>
     <head>
       <meta charset="UTF-8">
-      <title>Vontrip</title>
+      <title>dealhunter</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- Le styles -->
 
       <link href="/assets/bootstrap.css?body=1" media="screen" rel="stylesheet" type="text/css" />
-      <link href="/assets/vontrip.css?body=1" media="screen" rel="stylesheet" type="text/css" />
+      <link href="/assets/dealhunter.css?body=1" media="screen" rel="stylesheet" type="text/css" />
       <link href="/assets/formtastic.css?body=1" media="screen" rel="stylesheet" type="text/css" />
       <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
@@ -92,7 +92,7 @@
       <div class="row">
         <section class="span12">
           <header class="out">
-            <h2>VONTRIP es tu club privado de viajes y escapadas premium.</h2>
+            <h2>dealhunter es tu club privado de viajes y escapadas premium.</h2>
           </header>
 
           <div class="wrapper-padding">
@@ -103,9 +103,9 @@
 
                 <p>Cada semana recibirás un newsletter en el que te proponemos una selección de viajes y escapadas con descuentos de hasta el 70%. Las ofertas, cuidadosamente seleccionadas y negociadas por nuestro equipo de expertos, están disponibles en exclusiva por tiempo limitado.</p>
 
-                <p>Hacete socio ahora de VonTrip.com.ar y disfruta de nuestras exclusivas ofertas.</p>
+                <p>Hacete socio ahora de dealhunter.com.ar y disfruta de nuestras exclusivas ofertas.</p>
 
-                <h5>Bienvenidos a VONTRIP Argentina!</h5>
+                <h5>Bienvenidos a dealhunter Argentina!</h5>
 
               </article>
 
@@ -127,7 +127,7 @@
             <ul id="custumer-support" class="pull-right">
               <li class="custumer-support-title">Atención al Cliente</li>
               <li class="telephone-number">0800-345-TRIP(8747)</li>
-              <li class="contact-mail"><a href="<%= pages_contact_path %>"><i class="icon-contact-mail"></i> info@vontrip.com</a></li>
+              <li class="contact-mail"><a href="<%= pages_contact_path %>"><i class="icon-contact-mail"></i> info@dealhunter.com</a></li>
             </ul>
           </div>
         </div>
@@ -145,13 +145,13 @@
                 <li><a href="/pages/contact">Contacto</a></li>
               </ul>
             </nav>
-            <p class="copyright">Copyright © 2013 Vontrip.com. Todos los derechos reservados</p>
+            <p class="copyright">Copyright © 2013 dealhunter.com. Todos los derechos reservados</p>
           </div>
 
           <div class="span5">
             <ul class="inline pull-right social">
-              <li><a href="http://www.facebook.com/vontripargentina" target="_blank"><img src="/assets/icon-fb.png"></a></li>
-              <li><a href="https://twitter.com/VonTripArg" target="_blank"><img src="/assets/icon-twitter.png"></a></li>
+              <li><a href="http://www.facebook.com/dealhunterargentina" target="_blank"><img src="/assets/icon-fb.png"></a></li>
+              <li><a href="https://twitter.com/dealhunterArg" target="_blank"><img src="/assets/icon-twitter.png"></a></li>
               <li><a href="https://plus.google.com/116522684361738618061" target="_blank"><img src="/assets/icon-gPlus.png"></a></li>
 
             </ul>
@@ -174,7 +174,7 @@
       <div class="row">
         <section class="span12">
           <header class="out">
-            <h2>VONTRIP es tu club privado de viajes y escapadas premium.</h2>
+            <h2>dealhunter es tu club privado de viajes y escapadas premium.</h2>
           </header>
 
           <div class="wrapper-padding">
@@ -185,9 +185,9 @@
 
                 <p>Cada semana recibirás un newsletter en el que te proponemos una selección de viajes y escapadas con descuentos de hasta el 70%. Las ofertas, cuidadosamente seleccionadas y negociadas por nuestro equipo de expertos, están disponibles en exclusiva por tiempo limitado.</p>
 
-                <p>Hacete socio ahora de VonTrip.com.ar y disfruta de nuestras exclusivas ofertas.</p>
+                <p>Hacete socio ahora de dealhunter.com.ar y disfruta de nuestras exclusivas ofertas.</p>
 
-                <h5>Bienvenidos a VONTRIP Argentina!</h5>
+                <h5>Bienvenidos a dealhunter Argentina!</h5>
 
               </article>
 
