--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -100,7 +100,7 @@
             <div class="wrapper-padding">
               <hr>
               <div class="text-center">
-                <button type="submit" class="btn btn-vontrip rounded-borders-btn">Grabar Información</button>
+                <button type="submit" class="btn btn-dealhunter rounded-borders-btn">Grabar Información</button>
               </div>
             </div><!--end wrapper-padding-->
           </div><!--end wrapper-->
@@ -204,7 +204,7 @@
           <div class="wrapper-padding">
             <hr>
             <div class="text-center">
-              <button type="submit" class="btn btn-vontrip rounded-borders-btn">Grabar Información</button>
+              <button type="submit" class="btn btn-dealhunter rounded-borders-btn">Grabar Información</button>
             </div>
           </div><!--end wrapper-padding-->
 
