--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -77,7 +77,7 @@
               <hr>
               <div class="text-center">
 
-                <a class="btn btn-vontrip" href ="<%= users_edit_path(@user)%>">Editar Informacion</a>
+                <a class="btn btn-dealhunter" href ="<%= users_edit_path(@user)%>">Editar Informacion</a>
               </div>
             </div><!--end wrapper-padding-->
           </div><!--end wrapper-->
