--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -2174,7 +2174,7 @@ input[type="button"].btn-block {
 .btn-success.active,
 .btn-info.active,
 .btn-inverse.active,
-.btn-vontrip.active {
+.btn-dealhunter.active {
   color: rgba(255, 255, 255, 0.75);
 }
 .btn-primary {
