--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -8,7 +8,7 @@
   <!-- Le styles -->
 
   <link href="/assets/bootstrap.css?body=1" media="screen" rel="stylesheet" type="text/css" />
-  <link href="/assets/vontrip.css?body=1" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/assets/dealhunter.css?body=1" media="screen" rel="stylesheet" type="text/css" />
   <link href="/assets/formtastic.css?body=1" media="screen" rel="stylesheet" type="text/css" />
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
@@ -121,7 +121,7 @@
 
                     <hr>
                     <div class="text-center">
-                      <button type="submit" class="btn btn-vontrip">Cambiar mi contraseña</button>
+                      <button type="submit" class="btn btn-dealhunter">Cambiar mi contraseña</button>
                     </div>
                   </fieldset>
               <% end %>
@@ -136,7 +136,7 @@
 
               <address>
                 <strong>Email</strong><br>
-                <a href="mailto:info@vontrip.com">info@vontrip.com</a>
+                <a href="mailto:info@dealhunter.com">info@dealhunter.com</a>
               </address>
 
               <address>
@@ -146,7 +146,7 @@
 
               <address>
                 <strong>Twitter</strong><br>
-                <p>Para obtener respuestas en tiempo real a todas tus preguntas agreganos en twitter <a href="https://twitter.com/VonTripArg" target="_blank">@VontripArg</a></p>
+                <p>Para obtener respuestas en tiempo real a todas tus preguntas agreganos en twitter <a href="https://twitter.com/dealhunterArg" target="_blank">@dealhunterArg</a></p>
               </address>
 
             </div><!--end span4-->
@@ -169,7 +169,7 @@
         <ul id="custumer-support" class="pull-right">
           <li class="custumer-support-title">Atención al Cliente</li>
           <li class="telephone-number">0800-345-TRIP(8747)</li>
-          <li class="contact-mail"><a href="<%= pages_contact_path %>"><i class="icon-contact-mail"></i> info@vontrip.com</a></li>
+          <li class="contact-mail"><a href="<%= pages_contact_path %>"><i class="icon-contact-mail"></i> info@dealhunter.com</a></li>
         </ul>
       </div>
     </div>
@@ -187,13 +187,13 @@
             <li><a href="/pages/contact">Contacto</a></li>
           </ul>
         </nav>
-        <p class="copyright">Copyright © 2013 Vontrip.com. Todos los derechos reservados</p>
+        <p class="copyright">Copyright © 2013 dealhunter.com. Todos los derechos reservados</p>
       </div>
 
       <div class="span5">
         <ul class="inline pull-right social">
-          <li><a href="http://www.facebook.com/vontripargentina" target="_blank"><img src="/assets/icon-fb.png"></a></li>
-          <li><a href="https://twitter.com/VonTripArg"target="_blank"><img src="/assets/icon-twitter.png"></a></li>
+          <li><a href="http://www.facebook.com/dealhunterargentina" target="_blank"><img src="/assets/icon-fb.png"></a></li>
+          <li><a href="https://twitter.com/dealhunterArg"target="_blank"><img src="/assets/icon-twitter.png"></a></li>
           <li><a href="https://plus.google.com/116522684361738618061" target="_blank"><img src="/assets/icon-gPlus.png"></a></li>
 
         </ul>
