--- a/app/views/new_user_mailer/new_user_email.html.erb
+++ b/app/views/new_user_mailer/new_user_email.html.erb
@@ -29,7 +29,7 @@
       <!--header-->
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td valign="middle" align="center" height="100" style="background:#f8fdff;" bgcolor="#fff"><img src="http://dealhunterarg.herokuapp.com/assets/logo-landing.png" alt="Vontrip, Tu club privado de viajes y escapadas" width="258" height="100" longdesc="http://www.vontrip.com"></td>
+          <td valign="middle" align="center" height="100" style="background:#f8fdff;" bgcolor="#fff"><img src="http://dealhunterarg.herokuapp.com/assets/logo-landing.png" alt="dealhunter, Tu club privado de viajes y escapadas" width="258" height="100" longdesc="http://www.dealhunter.com"></td>
         </tr>
         <tr>
           <td valign="middle" align="center" style="background:#c1beb6; color:#fff;" bgcolor="#ff4b3d">
@@ -82,7 +82,7 @@
           <td valign="top" width="270"><img src="https://dealhunterarg.herokuapp.com/assets/mailer.png" width="270" height="270" style="margin-top: 50px;"></td>
         </tr>
         <tr>
-          <td colspan="2" valign="middle" align="center" height="21"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/divider.jpg" width="551" height="21"></td>
+          <td colspan="2" valign="middle" align="center" height="21"><img src="https://s3-us-west-2.amazonaws.com/dealhunter/img+html+mailer+app/divider.jpg" width="551" height="21"></td>
         </tr>
 
         <tr>
@@ -135,14 +135,14 @@
                 <td width="512">
                   <p style="margin:5px 0; color:#3253FF;">Atención al Cliente</p>
                   <h3 style="font-weight:normal; margin:0px;">0800-345-DEAL(3325)</h3>
-                  <p style="margin:0px; font-size: 12px; line-height:20px;"><a href="mailto:info@vontrip.com" style="color:#333; text-decoration:none;">info@dealhunter.com</a></p>
+                  <p style="margin:0px; font-size: 12px; line-height:20px;"><a href="mailto:info@dealhunter.com" style="color:#333; text-decoration:none;">info@dealhunter.com</a></p>
                 </td>
                 <td width="88">
                   <table width="88" border="0" cellspacing="0" cellpadding="0" height="34">
                     <tr>
-                      <td width="32"><a href="http://www.facebook.com/dealhunterArgentina"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/icon-fb.jpg" width="32" height="24" alt="Facebook"></a></td>
-                      <td width="32"><a href="http://www.twitter.com/dealhunterArg"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/icon-twitter.jpg" width="32" height="24" alt="Twitter"></a></td>
-                      <td width="24"><a href="https://www.google.com"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/icon-gPlus.jpg" width="24" height="24" alt="google"></a></td>
+                      <td width="32"><a href="http://www.facebook.com/dealhunterArgentina"><img src="https://s3-us-west-2.amazonaws.com/dealhunter/img+html+mailer+app/icon-fb.jpg" width="32" height="24" alt="Facebook"></a></td>
+                      <td width="32"><a href="http://www.twitter.com/dealhunterArg"><img src="https://s3-us-west-2.amazonaws.com/dealhunter/img+html+mailer+app/icon-twitter.jpg" width="32" height="24" alt="Twitter"></a></td>
+                      <td width="24"><a href="https://www.google.com"><img src="https://s3-us-west-2.amazonaws.com/dealhunter/img+html+mailer+app/icon-gPlus.jpg" width="24" height="24" alt="google"></a></td>
                     </tr>
                   </table>
                 </td>
