--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -3,14 +3,14 @@
     <html>
     <head>
       <meta charset="UTF-8">
-      <title>Vontrip</title>
+      <title>dealhunter</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- Le styles -->
 
       <link href="/assets/bootstrap.css?body=1" media="screen" rel="stylesheet" type="text/css" />
-      <link href="/assets/vontrip.css?body=1" media="screen" rel="stylesheet" type="text/css" />
+      <link href="/assets/dealhunter.css?body=1" media="screen" rel="stylesheet" type="text/css" />
       <link href="/assets/formtastic.css?body=1" media="screen" rel="stylesheet" type="text/css" />
       <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
@@ -124,7 +124,7 @@
 
                         <hr>
                         <div class="text-center">
-                          <button type="submit" class="btn btn-vontrip">Enviar</button>
+                          <button type="submit" class="btn btn-dealhunter">Enviar</button>
                         </div>
                       </fieldset>
                   <% end %>
@@ -139,7 +139,7 @@
 
                   <address>
                     <strong>Email</strong><br>
-                    <a href="mailto:info@vontrip.com">info@vontrip.com</a>
+                    <a href="mailto:info@dealhunter.com">info@dealhunter.com</a>
                   </address>
 
                   <address>
@@ -149,7 +149,7 @@
 
                   <address>
                     <strong>Twitter</strong><br>
-                    <p>Para obtener respuestas en tiempo real a todas tus preguntas agreganos en twitter <a href="https://twitter.com/VonTripArg" target="_blank">@VontripArg</a></p>
+                    <p>Para obtener respuestas en tiempo real a todas tus preguntas agreganos en twitter <a href="https://twitter.com/dealhunterArg" target="_blank">@dealhunterArg</a></p>
                   </address>
 
                 </div><!--end span4-->
@@ -172,7 +172,7 @@
             <ul id="custumer-support" class="pull-right">
               <li class="custumer-support-title">Atención al Cliente</li>
               <li class="telephone-number">0800-345-TRIP(8747)</li>
-              <li class="contact-mail"><a href="<%= pages_contact_path %>"><i class="icon-contact-mail"></i> info@vontrip.com</a></li>
+              <li class="contact-mail"><a href="<%= pages_contact_path %>"><i class="icon-contact-mail"></i> info@dealhunter.com</a></li>
             </ul>
           </div>
         </div>
@@ -190,13 +190,13 @@
                 <li><a href="/pages/contact">Contacto</a></li>
               </ul>
             </nav>
-            <p class="copyright">Copyright © 2013 Vontrip.com. Todos los derechos reservados</p>
+            <p class="copyright">Copyright © 2013 dealhunter.com. Todos los derechos reservados</p>
           </div>
 
           <div class="span5">
             <ul class="inline pull-right social">
-              <li><a href="http://www.facebook.com/vontripargentina" target="_blank"><img src="/assets/icon-fb.png"></a></li>
-              <li><a href="https://twitter.com/VonTripArg"target="_blank"><img src="/assets/icon-twitter.png"></a></li>
+              <li><a href="http://www.facebook.com/dealhunterargentina" target="_blank"><img src="/assets/icon-fb.png"></a></li>
+              <li><a href="https://twitter.com/dealhunterArg"target="_blank"><img src="/assets/icon-twitter.png"></a></li>
               <li><a href="https://plus.google.com/116522684361738618061" target="_blank"><img src="/assets/icon-gPlus.png"></a></li>
 
             </ul>
@@ -250,7 +250,7 @@
 
                         <hr>
                         <div class="text-center">
-                          <button type="submit" class="btn btn-vontrip">Enviar</button>
+                          <button type="submit" class="btn btn-dealhunter">Enviar</button>
                         </div>
                       </fieldset>
                   <% end %>
@@ -265,7 +265,7 @@
 
                   <address>
                     <strong>Email</strong><br>
-                    <a href="mailto:info@vontrip">info@vontrip.com</a>
+                    <a href="mailto:info@dealhunter">info@dealhunter.com</a>
                   </address>
 
                   <address>
@@ -275,7 +275,7 @@
 
                   <address>
                     <strong>Twitter</strong><br>
-                    <p>Para obtener respuestas en tiempo real a todas tus preguntas agreganos en twitter <a href="http://www.twitter.com/vontriparg">@VontripArg</a></p>
+                    <p>Para obtener respuestas en tiempo real a todas tus preguntas agreganos en twitter <a href="http://www.twitter.com/dealhunterarg">@dealhunterArg</a></p>
                   </address>
 
                 </div><!--end span4-->
