--- a/app/views/pages/work_with_us.html.erb
+++ b/app/views/pages/work_with_us.html.erb
@@ -3,14 +3,14 @@
     <html>
     <head>
       <meta charset="UTF-8">
-      <title>Vontrip</title>
+      <title>dealhunter</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- Le styles -->
 
       <link href="/assets/bootstrap.css?body=1" media="screen" rel="stylesheet" type="text/css" />
-      <link href="/assets/vontrip.css?body=1" media="screen" rel="stylesheet" type="text/css" />
+      <link href="/assets/dealhunter.css?body=1" media="screen" rel="stylesheet" type="text/css" />
       <link href="/assets/formtastic.css?body=1" media="screen" rel="stylesheet" type="text/css" />
       <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
@@ -130,7 +130,7 @@
                       <textarea class="" rows="3" style="width:97.8%;" placeholder=""></textarea>
                       <hr>
                       <div class="text-center">
-                        <button type="submit" class="btn btn-vontrip">Enviar</button>
+                        <button type="submit" class="btn btn-dealhunter">Enviar</button>
                       </div>
                     </fieldset>
                   </form>
@@ -147,7 +147,7 @@
 
                   <address>
                     <strong>Email</strong><br>
-                    <a href="mailto:info@vontrip">info@vontrip.com</a>
+                    <a href="mailto:info@dealhunter">info@dealhunter.com</a>
                   </address>
 
                   <address>
@@ -157,7 +157,7 @@
 
                   <address>
                     <strong>Twitter</strong><br>
-                    <p>Para obtener respuestas en tiempo real a todas tus preguntas agreganos en twitter <a href="http://www.twitter.com/vontriparg">@VontripArg</a></p>
+                    <p>Para obtener respuestas en tiempo real a todas tus preguntas agreganos en twitter <a href="http://www.twitter.com/dealhunterarg">@dealhunterArg</a></p>
                   </address>
 
                 </div><!--end span4-->
@@ -180,7 +180,7 @@
             <ul id="custumer-support" class="pull-right">
               <li class="custumer-support-title">Atención al Cliente</li>
               <li class="telephone-number">0800-345-TRIP(8747)</li>
-              <li class="contact-mail"><a href="<%= pages_contact_path %>"><i class="icon-contact-mail"></i> info@vontrip.com</a></li>
+              <li class="contact-mail"><a href="<%= pages_contact_path %>"><i class="icon-contact-mail"></i> info@dealhunter.com</a></li>
             </ul>
           </div>
         </div>
@@ -198,13 +198,13 @@
                 <li><a href="/pages/contact">Contacto</a></li>
               </ul>
             </nav>
-            <p class="copyright">Copyright © 2013 Vontrip.com. Todos los derechos reservados</p>
+            <p class="copyright">Copyright © 2013 dealhunter.com. Todos los derechos reservados</p>
           </div>
 
           <div class="span5">
             <ul class="inline pull-right social">
-              <li><a href="http://www.facebook.com/vontripargentina" target="_blank"><img src="/assets/icon-fb.png"></a></li>
-              <li><a href="https://twitter.com/VonTripArg" target="_blank"><img src="/assets/icon-twitter.png"></a></li>
+              <li><a href="http://www.facebook.com/dealhunterargentina" target="_blank"><img src="/assets/icon-fb.png"></a></li>
+              <li><a href="https://twitter.com/dealhunterArg" target="_blank"><img src="/assets/icon-twitter.png"></a></li>
               <li><a href="https://plus.google.com/116522684361738618061" target="_blank"><img src="/assets/icon-gPlus.png"></a></li>
 
             </ul>
@@ -265,7 +265,7 @@
                       <textarea class="" rows="3" style="width:97.8%;" placeholder=""></textarea>
                       <hr>
                       <div class="text-center">
-                        <button type="submit" class="btn btn-vontrip">Enviar</button>
+                        <button type="submit" class="btn btn-dealhunter">Enviar</button>
                       </div>
                     </fieldset>
                   </form>
@@ -282,7 +282,7 @@
 
                   <address>
                     <strong>Email</strong><br>
-                    <a href="mailto:info@vontrip">info@vontrip.com</a>
+                    <a href="mailto:info@dealhunter">info@dealhunter.com</a>
                   </address>
 
                   <address>
@@ -292,7 +292,7 @@
 
                   <address>
                     <strong>Twitter</strong><br>
-                    <p>Para obtener respuestas en tiempo real a todas tus preguntas agreganos en twitter <a href="http://www.twitter.com/vontriparg">@VontripArg</a></p>
+                    <p>Para obtener respuestas en tiempo real a todas tus preguntas agreganos en twitter <a href="http://www.twitter.com/dealhunterarg">@dealhunterArg</a></p>
                   </address>
 
                 </div><!--end span4-->
