--- a/app/views/users/titles_user.html.erb
+++ b/app/views/users/titles_user.html.erb
@@ -186,7 +186,7 @@
         <div class="wrapper-padding">
           <hr>
           <div class="text-center">
-            <button type="submit" class="btn btn-vontrip rounded-borders-btn">Grabar Información</button>
+            <button type="submit" class="btn btn-dealhunter rounded-borders-btn">Grabar Información</button>
           </div>
         </div><!--end wrapper-padding-->
       </div>
