--- a/app/views/users/offers_company_user.html.erb
+++ b/app/views/users/offers_company_user.html.erb
@@ -3,7 +3,7 @@
     <section class="span8">
       <div id="recommend-to-friend" class="pull-right">
         <ul>
-          <li><h2><a href="#myModalInvite" role="button"  data-toggle="modal">INVITAR AMIGOS</a></h2></li>
+          <li><h2><a href="#myModalInvite" role="button"  data-toggle="modal">Nueva oferta</a></h2></li>
 
         </ul>
       </div><!--end recommend-to-friend-->
