--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -168,7 +168,7 @@
       <div class="span6">
         <ul id="custumer-support" class="pull-right">
           <li class="custumer-support-title">Atención al Cliente</li>
-          <li class="telephone-number">0800-345-TRIP(8747)</li>
+          <li class="telephone-number">0800-345-DEAL(3315)</li>
           <li class="contact-mail"><a href="<%= pages_contact_path %>"><i class="icon-contact-mail"></i> info@dealhunter.com</a></li>
         </ul>
       </div>
@@ -202,13 +202,5 @@
 
   </div>
 
-  <div id="footer-bottom">
-    <div class="container">
-      <div class="row">
-        <div class="span11 mercado-pago">Tarjetas de Crédito. Pagá en hasta 12 cuotas sin interés <img src="/assets/mercado-pago.png"></div>
-        <div class="span1"><a href="http://qr.afip.gob.ar/?qr=bgwZY8soyiF5c-CJ7-kmCg,," target="_F960AFIPInfo"><img src="/assets/data-fiscal.png" class="pull-right datafiscal"></a></div>
-      </div><!--end row-->
-    </div><!--end container-->
-  </div><!--end footer-bottom-->
 
 </footer><!--end footer-->
