--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,7 +86,7 @@
                       <% end %>
                       <li><a href="<%= edit_user_path(current_user) %>">Mi Perfil</a></li>
                       <% if current_user.user_role_id == 1%>
-                        <li><a href="#">Mis sucursales</a></li>
+                        <li><a href="<%= users_branches_company_user_path %>">Mis sucursales</a></li>
                       <%else%>
                         <li><a href="<%= users_titles_user_path %>">Mis Intereses</a></li>
                       <%end%>
