Change button and add modal for new branch

--- a/app/views/users/offers_company_user.html.erb
+++ b/app/views/users/offers_company_user.html.erb
@@ -199,7 +199,7 @@
           </div>
           <div class="modal-footer">
             <button class="btn" data-dismiss="modal" aria-hidden="true">Cancelar</button>
-            <button class="btn btn-vontrip" type="submit">Invitar</button>
+            <button class="btn btn-vontrip" type="submit">Guardar</button>
           </div>
       <% end %>
 
