--- a/app/views/users/branches_company_user.html.erb
+++ b/app/views/users/branches_company_user.html.erb
@@ -1,6 +1,12 @@
 <div class="container" id="main-content">
   <div class="row">
     <section class="span8 rounded-borders light-shadowed">
+      <div id="recommend-to-friend" class="pull-right">
+        <ul>
+          <li><h2><a href="#newBranchModal" role="button"  data-toggle="modal">Nueva sucursal</a></h2></li>
+
+        </ul>
+      </div>
       <header class="out rounded-borders-btn">
         <h2>Sucursales</h2>
       </header>
@@ -34,12 +40,6 @@
               </ul>
             </div>
 
-            <div class="wrapper-padding">
-              <hr>
-              <div class="text-center">
-                <button class="btn btn-dealhunter rounded-borders-btn">Nueva Sucursal</button>
-              </div>
-            </div>
 
 
           </article>
@@ -77,3 +77,36 @@
     </aside><!--end sidebar-->
   </div><!--end container-->
 </div><!--end row-->
+
+
+<div id="newBranchModal" class="modal modal-window hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">Nueva sucursal</h3>
+  </div>
+  <div class="modal-body">
+    <div id="invitar-amigo-box">
+
+      <header class="clearfix">
+        <ul class="inline clearfix">
+          <li class="pull-left headlines">
+            <p>Registra una sucursal<br><span class="red"></span></p>
+          </li>
+        </ul>
+      </header>
+      <hr>
+      <p><strong>Esto es lo que necesitamos para generar tu sucursal:</strong></p>
+      <%= semantic_nested_form_for [Branch.new()] do |f|%>
+          <div id="nameFields">
+            <label>Nombre: <%= f.input :name, :label => false %> </label>
+          </div>
+     </div>
+   </div>
+          <div class="modal-footer">
+            <button class="btn" data-dismiss="modal" aria-hidden="true">Cancelar</button>
+            <button class="btn btn-vontrip" type="submit">Guardar</button>
+          </div>
+      <% end %>
+
+
+ </div>  <!--end Modal-->
